# ChatDevApi

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
CompanyConfig/Flet/: ChatChainConfig.json  PhaseConfig.json  RoleConfig.json
api/: Api.md  __init__.py  actions.py  config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py  models.py  routes.py  task_manager.py
camel/: model_backend.py  typing.py  utils.py
camel/messages/: chat_messages.py
chatdev/: chat_env.py  phase.py  statistics.py
ecl/: utils.py
