[tool.poetry]
name = "chatdevapi"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
colorama = "0.4.6"
flask = "2.3.2"
flask-socketio = "5.3.4"
importlib-metadata = "6.8.0"
numpy = "1.24.3"
openai = "1.59.3"
regex = "2023.6.3"
requests = "2.31.0"
tenacity = "8.2.2"
tiktoken = "0.8.0"
virtualenv = "20.23.0"
werkzeug = "3.0.3"
markdown = "3.4.4"
pillow = "10.3.0"
wikipedia-api = "0.6.0"
beautifulsoup4 = "4.12.2"
faiss-cpu = "1.7.4"
pyyaml = "6.0"
easydict = "1.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
sqlalchemy = "^2.0.37"
click = "^8.1.8"
psutil = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
